fixed page 4 cards scrollbar

--- a/assets/IMAGES/Document_files/style.css
+++ b/assets/IMAGES/Document_files/style.css
@@ -1,14 +1,12 @@
-/* import  */
-
 /* font declaration ...........................*/
 
 @font-face {
     font-family: porsche;
-    src: url('./assets/fonts/Porsche-font.ttf');
+    src: url('/assets/fonts/Porsche-font.ttf');
 }
 @font-face {
     font-family: OpenSansItalic;
-    src: url('./assets/fonts/open-sans-italic/OpenSans-Italic.ttf');
+    src: url('/assets/fonts/open-sans-italic/OpenSans-Italic.ttf');
 }
 @font-face {
     font-family: Oleto;
@@ -16,7 +14,7 @@
 }
 @font-face {
     font-family: OpenSans;
-    src: url('./assets/fonts/open-sans-italic/OpenSans-Regular.ttf');
+    src: url('/assets/fonts/open-sans-italic/OpenSans-Regular.ttf');
 }
 
 
@@ -26,16 +24,12 @@
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
-    overflow-y: hidden;
-    -webkit-user-select: none; /* Safari */
-    -ms-user-select: none; /* IE 10 and IE 11 */
-    user-select: none; /* Standard syntax */
+    overflow: hidden;
 }
 
 :root{
     /* color......... */
     --lightColor: rgb(218, 218, 218);
-    --lightColorHover:rgb(153, 153, 153);
     --darkColor:rgb(15, 15, 15);
     --hoverColor:rgb(48, 48, 48);
     --gray-color:#a3a3a3;
@@ -59,9 +53,6 @@ html,body{
     overflow-y: auto;
 }
 
-body::-webkit-scrollbar{
-    display: none;
-}
 /* global structure ............................... */
 canvas{
     display: none;
@@ -290,7 +281,7 @@ nav .hamburger:hover{
 /* page 3.................................... */
 
 .page-3{
-    background-image: url('assets/tmp/upper car.png');
+    background-image: url('/assets/tmp/upper car.png');
     background-size: cover;
     background-position: center;
     color: var(--lightColor);
@@ -348,10 +339,7 @@ nav .hamburger:hover{
 
 /* page 4.........................................*/
 
-/* .blurred{
-    filter: blur(5px);
-    transition: all 0.25s ease-in-out;
-} */
+
 .page-4 {
    position: relative;
    backdrop-filter: blur(5px);
@@ -360,75 +348,28 @@ nav .hamburger:hover{
    background-size: 20px 20px;
 }
 
-
-.cards-wrapper{
-    overflow-x: auto;
-}
-.slidecontainer,.slidecontent{
-    height: 100%;
-    width: 100%;
-    overflow-x: auto ;
-
-}
-.slidecontent{
-    height: 90%;
-    padding-bottom: 20px;
-    
-    flex-wrap: nowrap;
-}
-
-.slidecontent::-webkit-scrollbar {
-    
-    height: 7px; /* height of the scrollbar */
-    background-color: var(--darkColor); /* background color of the scrollbar */
-    margin: 0px 25px;
-  }
-  
-  .slidecontent::-webkit-scrollbar-thumb {
-    background-color: var(--lightColor); /* color of the scrollbar thumb */
-    border-radius: 10px; /* rounded corners of the scrollbar thumb */
-    width: 5px; 
-    transition: all 0.3s;
-    cursor: grab;
-  }
-  
-  .slidecontent::-webkit-scrollbar-thumb:hover{
-    background-color: var(--lightColorHover); /* color of the scrollbar thumb */
-    transition: all 0.3s;
-  }
-
-  .slidecontent::-webkit-scrollbar-track {
-    width: 50px;
-    background-color: transparent; /* background color of the scrollbar track */
-    border-radius: 10px; /* rounded corners of the scrollbar track */
-  }
-  
 .page-4 .cards-wrapper{
     height: 100%;
-    width: max-content;
+    width: 100%;
     overflow-x: scroll;
     display: flex;
-    overflow-x: auto ;
     justify-content: center;
     align-items: center;
-    padding: 0px 25px;
-    margin: auto;
 }
 .page-4 .cards-wrapper .cards{
-
-    height: 60vh;
-    /* flex: 0; */
     
+    height: 60vh;
+
     /* max-height: 300px; */
     aspect-ratio: 3/4;
+    background-color: red;
     position: relative;
-    border-radius: 30px;
-    margin-right: 30px;
+    border-radius: 10px;
 }
 @media only screen and (max-width: 900px){
     .page-4 .cards-wrapper .cards{
-        width: 45vw;
-        min-width: 175px;
+        width: 35vw;
+        min-width: 250px;
         height: auto;
     }
 }
@@ -443,37 +384,28 @@ object-fit: cover;
 .page-4 .cards .txt{
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
     position: absolute;
-    bottom:-20%;
-    left: 30%;
+    bottom: 5%;
+    left: 5%;
     z-index: 99;
-    
 }
 .page-4 .cards .logo{
     height: fit-content;   
-    width: 20px; 
+    width: 10px; 
 }
 .page-4 .cards .txt h3{
     color:var(--yellow-color);
-    font-size: 1.75rem;
+    font-size: 0.5rem;
 }
-.page-4 .cards .gradient{
-    background-image: linear-gradient(transparent 30%,var(--gradient-color-bottom));
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 100%;
-    z-index: 9;
-    
-}
+
 
 /* .page 5............................................... */
 
 .page-5{
     color: var(--lightColor);
     
-    background-image: url('assets/tmp/footer.png');
+    background-image: url('/assets/tmp/footer.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
